--- a/package.json
+++ b/package.json
@@ -66,5 +66,17 @@
     "@babel/preset-react": "^7.18.6",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1"
-  }
+  },
+  "keywords": [
+    "react",
+    "facebook",
+    "facebook-login",
+    "login",
+    "javascript"
+  ],
+  "author": {
+    "name": "Kishan Shetty",
+    "email": "rajutripathi0298@gmail.com"
+  },
+  "homepage": "https://github.com/Raju0298/Facelogy"
 }
