--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
   "name": "facelogy",
-  "version": "0.2.0",
-  "private": true,
+  "version": "0.2.10",
+  "private": false,
   "dependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-syntax-jsx": "^7.21.4",
     "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "babel-jest": "^29.5.0",
+    "babel-loader": "^9.1.2",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
+    "customize-cra": "^1.0.0",
     "dotenv": "^16.0.3",
     "enzyme": "^3.11.0",
+    "facelogy": "^0.2.10",
     "jest": "^29.5.0",
     "mkcert": "^1.5.1",
     "oauth-1.0a": "^2.2.6",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.9.0",
@@ -38,10 +46,11 @@
   },
   "build": "set \"INLINE_RUNTIME_CHUNK=false\" && react-scripts build",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!my-library-dir)/'",
     "eject": "react-scripts eject",
+    "transpile": "NODE_ENV=production npx babel --out-dir ../build --relative --copy-files src",
     "coverage": "react-scripts test --coverage -u --watchAll --transformIgnorePatterns 'node_modules/(?!my-library-dir)/' --collectCoverageFrom='src/MyRoutes.js' "
   },
   "eslintConfig": {
@@ -63,7 +72,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-env": "^7.21.4",
+    "babel-loader": "^9.1.2",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1"
   },
