--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "facelogy",
-  "version": "0.2.11",
+  "version": "0.2.20",
   "private": false,
+  "main": "dist/index.js",
   "dependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-syntax-jsx": "^7.21.4",
     "@babel/plugin-transform-react-jsx": "^7.21.0",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "babel-jest": "^29.5.0",
-    "babel-loader": "^9.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -27,7 +24,6 @@
     "jest": "^29.5.0",
     "mkcert": "^1.5.1",
     "oauth-1.0a": "^2.2.6",
-    "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-notifications": "^1.7.4",
@@ -46,8 +42,10 @@
   },
   "build": "set \"INLINE_RUNTIME_CHUNK=false\" && react-scripts build",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --config webpack.config.js",
+    "bundle": "cross-env NODE_ENV=production node_modules/.bin/webpack -p --config webpack.config.dist.js",
+    "build": "webpack",
+    "prepublish": "npm run build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!my-library-dir)/'",
     "eject": "react-scripts eject",
     "transpile": "NODE_ENV=production npx babel --out-dir ../build --relative --copy-files src",
@@ -71,12 +69,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/preset-env": "^7.21.4",
-    "babel-loader": "^9.1.2",
-    "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.2.1"
-  },
   "keywords": [
     "react",
     "facebook",
@@ -84,9 +76,32 @@
     "login",
     "javascript"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Raju0298/Facelogy"
+  },
   "author": {
     "name": "Kishan Shetty",
     "email": "rajutripathi0298@gmail.com"
   },
-  "homepage": "https://github.com/Raju0298/Facelogy"
+  "homepage": "https://github.com/Raju0298/Facelogy",
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "style-loader": "^3.3.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
+  }
 }
